--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="{% static 'assets/index-cWzUyt8t.js' %}"></script>
+    <script type="module" crossorigin src="{% static 'assets/index-BxJnIQ2o.js' %}"></script>
     <link rel="stylesheet" crossorigin href="{% static 'assets/index-CX_GawH4.css' %}">
   </head>
   <body>
